tests/negative/test_cn_asgn_cn_tuple_member.orb
fnc makeFoo() (i32 i32) {
    let f:(i32 i32);
    ret f;
};

fnc main() () {
    let (f:((i32 i32) cn) (makeFoo));
    = (. f 0) 1;
};